# CallMeMaybe

./: .gitignore  Makefile  README.md  output_formula  pyproject.toml
output/: function_calling_results.json
src/: __main__.py
src/data/: states.json
src/engine/: __init__.py  prompter.py
src/layers/: __init__.py  functions_loader.py  instantiator.py  prompts_loader.py  vocabulary_fetcher.py  vocaulary_fetcher.py
src/models/: __init__.py  functions_data.py
src/states/: __init__.py  foname.py  foparam.py  foprompt.py  frname.py  frparam.py  frprompt.py
src/tools/: __init__.py  decoder.py  encoder.py  get_next_state.py  logits_getter.py
